# mfc_voice_summer

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.voice.yml  pyproject.toml
.memory-base/: index.md  overview.md
.memory-base/plans/: 2026-06-18-call-analytics-pipeline.md
.memory-base/specs/: 2026-06-18-call-analytics-pipeline-design.md  2026-06-25-clean-pipeline-runtime-design.md
docker/nginx/: default.conf
docker/voice-model-api/: Dockerfile  app.py  logging_config.py  requirements.txt
docker/web/: Dockerfile
docs/: runtime-pipeline.md
src/: main.py
src/call_analytics/: bootstrap.py  logging_config.py  report_view.py  web.py  worker_app.py
src/call_analytics/infra/: http.py
src/call_analytics/infra/ports/: __init__.py  artifact_store.py  diarizer.py  emotion_recognizer.py  job_repository.py  processing_queue.py  recording_source.py  report_generator.py  report_renderer.py  transcriber.py
src/call_analytics/service/: __init__.py  dialogue.py  pipeline.py  worker.py  workspace.py
src/call_analytics/service/ports/: __init__.py  application.py  pipeline.py
src/call_analytics/web_static/: index.html
src/call_analytics/web_static/assets/: app.css  app.js
src/domain/: __init__.py  dialogue.py  diarization.py  emotion.py  errors.py  job.py  recording.py  report.py  transcript.py
tests/: test_main.py  test_voice_model_api_logging.py
tests/call_analytics/: test_bootstrap.py  test_clean_architecture_boundaries.py  test_docker_config.py  test_report_view.py  test_web.py  test_web_static.py
tests/call_analytics/infra/adapters/: test_in_memory.py  (+7 more)
tests/call_analytics/service/: conftest.py  test_call_processing_service.py  test_dialogue_assembler.py  test_pipeline_port.py  test_processing_worker.py  test_report_renderer_stage.py  test_workspace.py
tests/domain/: test_boundary.py  test_diarization.py  test_emotion.py  test_job.py  test_recording.py  test_report.py  test_report_model.py  test_transcript.py
(+24 files in other folders)
