[project]
name = "mfc-voice-summer"
version = "0.1.0"
description = "Пайплайн анализа звонков ИИ колл-центра (Naumen)"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.4",
    "fastapi>=0.115",
    "python-multipart>=0.0.20",
    "reportlab>=4.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx2>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/domain", "src/call_analytics"]
sources = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003", "N818"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
